styles/files.less
.panel.files {
	position: relative;
	min-width: 340px;
	
	.public & {
		width: 100%;
	}
	
	.uploader_mask {
		.box-sizing;
		.transition(opacity 250ms ease 0s);

		color: #d3b910;
		background: #fffdd6;
		font-size: 18pt;
		height: 100%;
		opacity: 0;
		padding: 11px;
		position: absolute;
		text-align: center;
		visibility: hidden;
		width: 100%;
		z-index: 1000;

		&.active {
			opacity: 0.5;
			visibility: visible;
		}

		.inner {
			.box-sizing;

			border: 3px dashed #e2da36;
			border-radius: 5px;
			height: 100%;
		}
	}
	
	//.middle_bar {
		//.resize-compensation-top(31px);
	//}
	
	.toolbar .search_block {
		float: right;
		padding-right: 0;
		width: 200px;

		html.rtl & {
			float: left;
			padding-left: 0;
		}
	}
	
	.pathway {
		background: #ffffff;
		border-bottom: 1px solid #d5d5d5;
		padding: 6px 10px 6px 30px;
		
		html.rtl & {
			padding-left: 10px;
			padding-right: 30px;
		}
		
		a,
		b {
			display: inline-block;
			font-size: 10pt;
			height: 1em;
			line-height: 100%;
			padding: 2px 4px;
			vertical-align: text-top;
		}
	}
	
	.items_list {
		.items_sub_list {
			font-size: 0px;
			padding: 10px;
		}
		
		.item {
			background: none;
			cursor: pointer;
			display: inline-block;
			font-size: 9pt;
			height: 180px;
			margin: 0px 16px 20px 0px;
			max-height: 166px;
			max-width: 160px;
			opacity: 1;
			overflow: visible;
			vertical-align: top;
			white-space: normal;
			
			html.rtl & {
				margin-left: 4px;
				margin-right: 0px;
			}
			
			&.helper {
				margin-bottom: 0px;
				height: 0px;
				visibility: hidden;
			}
			
			&.deleted {
				max-height: 160px !important;
				max-width: 0px !important;
				opacity: 0;
				overflow: hidden;
				
				-webkit-transition: -webkit-transform 500ms ease 0s, opacity 500ms ease 0s, max-width 250ms ease 250ms;
				-moz-transition: transform 500ms ease 0s, opacity 500ms ease 0s, max-width 250ms ease 250ms;
				transition: transform 500ms ease 0s, opacity 500ms ease 0s, max-width 250ms ease 250ms;
				-webkit-transform: scale(0.5);
				transform: scale(0.5);
			}
			
			&.incomplete {
				opacity: 0.5;
				
				.cancel {
					display: block;
				}
			}
			
			&.selected, 
			&.checked {
				&.folder .item_content,
				.item_content {
					background: #ebf7cb;
				}
			}
			
			.no-public &.published .published_icon {
				background: #64aedc;
				border-radius: 2px;
				color: #ffffff;
				display: block;
				float: right;
				font-size: 14px;
				height: 18px;
				line-height: 16px;
				margin-right: 30px;
				margin-top: -35px;
				overflow: hidden;
				position: relative;
				width: 18px;
				text-align: center;
				
				.init-icon-font();
				
				&:before {
					content: "\e65c";
					vertical-align: middle;
				}
				
				&.with_thumb {
					margin-right: -5px;
					margin-top: -15px;
				}
				
				&:hover {
					background-color: #328dc5;
				}
			}
			
			&.aslink .item_content {
				border: 1px dashed #c0c0c0;
				padding: 8px 8px 6px;
			}
			
			.cancel {
				background: #e84d49;
				border-radius: 2px;
				color: #ffffff;
				cursor: pointer;
				display: none;
				float: right;
				font-size: 12px;
				height: 14px;
				margin-left: -14px;
				margin-top: 5px;
				overflow: hidden;
				position: relative;
				text-align: center;
				width: 14px;
				z-index: 2;
				
				.init-icon-font();
				
				&:before {
					content: "\e63e";
				}
			}

			.header {
				background: transparent;
				border-radius: 5px 5px 0px 0px;
				color: #626262;
				display: none;
				font-size: 8pt;
				height: 24px;
				line-height: 120%;
				margin: 1px 1px -31px;
				overflow: hidden;
				padding: 4px 4px 2px;
				position: relative;
				text-align: center;
				white-space: normal;
				z-index: 1;
			}
			
			.title {
				font-size: 9pt;
			}
		
			.controls {
				display: none;
				float: none;
				font-size: 8pt;
				height: 20px;
				margin: -22px 0px 0px;
				padding-top: 2px;
			}
			
			&:hover .header {
				background: white;
			}
			&.selected .header,
			&.checked .header,
			&.selected:hover .header,
			&.checked:hover .header {
				background: #ebf7cb;
			}
			&:hover,
			&.selected,
			&.checked {
				.header {
					opacity: 0.9;
				}
				.header,
				.controls {
					display: block;
				}
				
				.name,
				.ext {
					color: #3d3d3d;
				}
				
				.size {
					color: #929292;
				}
			}
			
			&.folder {
				height: 139px;
				text-align: center;
				width: 136px;
				
				.item_content {
					background: initial;
					border: 0px;
					border-radius: 3px;
					box-shadow: none;
					display: block;
					margin-bottom: 6px;
					padding: 8px 8px 6px;
				}
				
				&:hover,
				&.selected,
				&.checked {
					.item_content {
						border: 1px solid #c9c9c9;
						padding: 7px 7px 6px;
					}
				}
				
				.image {
					border-bottom: 0px;
					min-height: 91px;
				}
				
				.icon {
					background: url("../../images/sprites.png");
					background-position: -440px -360px;
					display: inline-block;
					height: 30px;
					width: 35px;
				}
				
				.name {
					display: block;
					height: 2.5em;
					overflow: hidden;
					white-space: normal;
					word-wrap: break-word;
					-ms-word-break: break-all;
				}
			}
		}
		
		.large .folder .icon {
			background-position: -880px -400px;
			height: 65px;
			width: 66px;
		}
	}
}

.cssanimations .panel.files .items_list .item .item_content.recivedAnim {
	border-radius: 4px;
	.animation(highlight 0.5s linear);
}

.panel.files .items_list .item > .mask {
	border-radius: 3px;
	display: none;
	height: 100%;
	position: absolute;
	top: 0;
	width: 100%;
}

.panel.files .dragover .items_list .item > .mask {
	display: block;
}

.panel.files .item .droppableHover,
.panel.storages_panel .item .droppableHover,
.panel.files .panel_top .droppableHover{
	text-shadow: 0px 1px 0px #ffffff !important;
	background: #dcd9d1 !important;
	color: #626262 !important;
}

.popup.files {
	.popup_panel {
		height: 400px;
		max-width: 100%;
		padding-bottom: 62px; //own padding + buttons height;
		width: 840px;

		.panels {
			border: 1px solid #cccccc;
			border-radius: 5px;
			overflow: hidden;
			
			.panel {
				padding: 0px;
				
				//.panel_content {
				//	.resize-compensation-top(0px);
				//}

				&.storages_panel {
					width: 25%;

					.items_list .item {

						.title .name {
							.fadeout();
						}
						
						&.selected .title .name {
							.fadeout();
						}
					}
				}

				&.files {
					width: 75%;
				}
			}
		}
	}
}

.popup.files_create_link {
	.popup_panel {
		max-width: 450px;
		
		.image {
			border-bottom: 0;
		}
	}	
}

.popup.files .popup_panel .image {
	border-bottom: 0;
}

